# ChangeLog for net-im/skypetab-ng
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/skypetab-ng/ChangeLog,v 1.15 2015/04/01 20:52:59 slyfox Exp $

  01 Apr 2015; Sergei Trofimovich <slyfox@gentoo.org> skypetab-ng-9999.ebuild:
  Update multilib deps in live ebuild.

  14 Mar 2015; Michał Górny <mgorny@gentoo.org> -skypetab-ng-0.5.1.ebuild:
  Drop old versions that require emul-linux-x86 packages.

  30 Nov 2014; Pacho Ramos <pacho@gentoo.org> skypetab-ng-0.5.2.ebuild:
  Update multilib deps

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> skypetab-ng-0.5.1.ebuild,
  skypetab-ng-0.5.2.ebuild, skypetab-ng-9999.ebuild:
  Remove trailing '.' from DESCRIPTION.

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> skypetab-ng-0.5.1.ebuild,
  skypetab-ng-0.5.2.ebuild, skypetab-ng-9999.ebuild:
  Move Qt dependencies to the new category

*skypetab-ng-0.5.2 (11 Dec 2012)

  11 Dec 2012; Sergei Trofimovich <slyfox@gentoo.org> +skypetab-ng-0.5.2.ebuild:
  Version bump.

*skypetab-ng-0.5.1 (03 Dec 2012)

  03 Dec 2012; Sergei Trofimovich <slyfox@gentoo.org> +skypetab-ng-0.5.1.ebuild,
  -files/skypetab-ng-0.5.0-fix-multiwindows.patch, -skypetab-ng-0.5.0-r1.ebuild,
  -skypetab-ng-0.5.0.ebuild, skypetab-ng-9999.ebuild:
  Version bump (skype-4.1 compatible). Fixes bug #445786 by Rion.

  26 Jul 2012; Johannes Huber <johu@gentoo.org> skypetab-ng-0.5.0-r1.ebuild,
  skypetab-ng-0.5.0.ebuild, skypetab-ng-9999.ebuild:
  Add missing slot dependencies on Qt.

*skypetab-ng-0.5.0-r1 (24 Jul 2012)

  24 Jul 2012; Sergei Trofimovich <slyfox@gentoo.org>
  +files/skypetab-ng-0.5.0-fix-multiwindows.patch, +skypetab-ng-0.5.0-r1.ebuild,
  -skypetab-ng-0.4.11.ebuild:
  Picked upstream patch to disable multiwindow mode. Thanks to Ulya Fokanova who
  noticed the problem.

*skypetab-ng-0.5.0 (26 Jun 2012)

  26 Jun 2012; Sergei Trofimovich <slyfox@gentoo.org> +skypetab-ng-0.5.0.ebuild,
  -skypetab-ng-0.4.9_pre20120325.ebuild: