@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install prepare setup unpack
-DEPEND=|| ( ( dev-qt/qtgui:4[abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-qtlibs[-abi_x86_32(-)] ) )
+DEPEND=|| ( ( dev-qt/qtcore:4[abi_x86_32(-)] dev-qt/qtgui:4[abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-qtlibs[-abi_x86_32(-)] ) )
 DESCRIPTION=An LD_PRELOAD wrapper that adds tabs to Skype for Linux
 EAPI=4
 HOMEPAGE=http://github.com/kekekeks/skypetab-ng
 KEYWORDS=-* ~x86 ~amd64
 LICENSE=LGPL-3
-RDEPEND=|| ( ( dev-qt/qtgui:4[abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-qtlibs[-abi_x86_32(-)] ) ) || ( >=net-im/skype-4.1 <net-im/skype-4.1[-qt-static] )
+RDEPEND=|| ( ( dev-qt/qtcore:4[abi_x86_32(-)] dev-qt/qtgui:4[abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-qtlibs[-abi_x86_32(-)] ) ) || ( >=net-im/skype-4.1 <net-im/skype-4.1[-qt-static] )
 SLOT=0
 SRC_URI=http://github.com/kekekeks/skypetab-ng/tarball/v0.5.2 -> skypetab-ng-0.5.2.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	ea709b525d28e3087eddedb2f884dbbe	qt4-r2	7199e3db5b5908325487d379c6f67cf0	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66
-_md5_=6afc7ab4c355ac80a25633a1fa1611f5
+_md5_=7ad38585154eac0925c50f2cc9bbb4fc
