@@ -1,10 +1,10 @@
 DEFINED_PHASES=compile configure install prepare setup unpack
-DEPEND=|| ( ( dev-qt/qtgui:4[abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-qtlibs[-abi_x86_32(-)] ) ) dev-vcs/git
+DEPEND=|| ( ( dev-qt/qtcore:4[abi_x86_32(-)] dev-qt/qtgui:4[abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-qtlibs[-abi_x86_32(-)] ) ) dev-vcs/git
 DESCRIPTION=An LD_PRELOAD wrapper that adds tabs to Skype for Linux
 EAPI=4
 HOMEPAGE=http://github.com/kekekeks/skypetab-ng
 LICENSE=LGPL-3
-RDEPEND=|| ( ( dev-qt/qtgui:4[abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-qtlibs[-abi_x86_32(-)] ) ) || ( >=net-im/skype-4.1 <net-im/skype-4.1[-qt-static] )
+RDEPEND=|| ( ( dev-qt/qtcore:4[abi_x86_32(-)] dev-qt/qtgui:4[abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-qtlibs[-abi_x86_32(-)] ) ) || ( >=net-im/skype-4.1 <net-im/skype-4.1[-qt-static] )
 SLOT=0
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	9fb270e417e0e83d64ca52586c4a79de	git-2	e28f0d8a9b321431b1e699782851b827	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	ea709b525d28e3087eddedb2f884dbbe	qt4-r2	7199e3db5b5908325487d379c6f67cf0	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
-_md5_=18e38057b410133a2b4d0d9988713f87
+_md5_=2f2d225541e7fc54bcd1eb6f7f2dab1e
