@@ -2,14 +2,14 @@
 Hash: SHA256
 
 DIST skypetab-ng-0.5.2.tar.gz 54244 SHA256 cb47961ddb9d5754141c10c862d991704ae065abf2cba1e4763a78a5dcbf0805 SHA512 28a19ea983a81c069bb6ad24c337561293f7ec53ca9a315fb872c9341dccecf4eb30e1652b1f012f7be34060fb955a8c085327ae03017264ccc4510976d3f6ea WHIRLPOOL 48b1a86a588dd60c3ee7b9185625027bbaef69b0a6dce237c1e38d3c7dc5b762675d7d21efb88bef7e3840ac1464cdfa3ca4a531756ab3f3f155c2a681aec0e7
-EBUILD skypetab-ng-0.5.2.ebuild 1011 SHA256 6c8b1393997ad6a29458c9f247a803c263942dcdc58cacf0df24e7b108324933 SHA512 d939bd45f24efd657161da30b5500b25ca6ff6fd530f1ffd4017a587178e3a74eaa4506524dfc00ada64e2e16bb22921e63312dfc10cf66407392b5f7d06db50 WHIRLPOOL ed37e3d7483973e3b6e49af4633bb0b929a0e0009d07466d46b9c374dc7a660297097b7f322e21e252ade68caaec8987f0293d5e1efd2c96a2cea29412947020
-EBUILD skypetab-ng-9999.ebuild 1011 SHA256 825970e4686914679afd41cdca971178a04da502478fb1f5d8066bfa80c74f72 SHA512 b05933b95edc8138ea1bca73d124486f6beef693aac6596d890a82f263f52dd932cc5dcf2a6115f151922680dc01b2e9bd06370a52a52a869b60816f949694f8 WHIRLPOOL 443501074b2e4e5edbb7f0c8c41ca87c14a835858ea9efa86e2a23b055bb710b6de6151f31c907c7767a4a114927a1772c2ba49ae365de1f63b4c94b7a33e926
-MISC ChangeLog 3376 SHA256 a84f3161cee77818bdfa9885331e76bd20204c2927231e484f6224019448a118 SHA512 244f2e559649853f16d148b7beb2b320f9f8d902b095f4f8037150b3a76875247ceb93cc401b7384cad0ebfa4935782c67e15d14e197c76ea14f61ba41c5c759 WHIRLPOOL ec1ecd3a47c39a780cbb3d94389ce0f5ede7610089a4e93f8a617418e7dcd86a7622037bb73be6e8ac5e356b756ba14ff8f90f1dfe7f558c38c023819b2e27ae
+EBUILD skypetab-ng-0.5.2.ebuild 1046 SHA256 c23a2d0be53f70c888c6b2955abc328a7849d7c2fafe181b02241f54ccac3387 SHA512 4eb8f2bbac0a5004e8091bed325bb724b3ffd6d26450f3bf05d2763402033bff83eb7b314fdbff757a1d675f745dd49537a3a13f119c8cdfb7b2819184558cae WHIRLPOOL 5ccc7e82a929e80d4f5e79001e664ca0891542495bf65407b6d050264dbd492eb6f196346a910b420f3efd9b7fba22cfa6e1ff15154e5f63550abdfe3ae1e170
+EBUILD skypetab-ng-9999.ebuild 1045 SHA256 76a6d64858a08796aa88c5ca5d2be11d3b9c60d70c7ab4b3a24616d63223603d SHA512 465b4644fd8c0940686d3ec27d4bd5110fb1ea25fb5d83a20564290d28dc86ef128b50713e060403d824d62d044a02ccd35be56935651e31688ad6dd93e96a2a WHIRLPOOL 51a42436394800b8bf8c38b634c0dbc3b5bb9506444b5d3df21ee815a76e866cbecb24f0ddbaa65a925519be620fc3112bad442e05759008b963be2f9ded706d
+MISC ChangeLog 3558 SHA256 8e377818db9d383b1ea4dc49bb1891804d4977924e8241bb27ad214353cf8bf1 SHA512 7880120b548b84a279b172a41cea36c9a5c88c48cc5779cf726f7cfeeae03e040bb6a72face21ec812e2985cbc0c8c2f0d00ee51cf922800fd9d3a993c29a3b1 WHIRLPOOL 9655ba6557a9e4d31b47434834a89fac304860e91e66341eaf1c2e61ac5a2e7d415b365c6bec874104db0c2e3f9a3e7d86436c227e7fd0f44594c46e6e2f9088
 MISC metadata.xml 285 SHA256 5b7e5a7dd46327e901035dee668f098d4809e91234fd75f6d1cf2c3db7178d16 SHA512 c83f84d36f446da066e0205c938218bf775caa2b7bca33047137f0e87a10aa89731d6875d3849b3162979101ddb2e4ef6923d37521d63ccb560418221135d94c WHIRLPOOL 8d7d2e85da6081b04918ac0010a12c93ba5f524dd6f7995dd437026fbd952d6d95aded099c1eec14321bfa70ca4f748d717f2ce9ad12fcb0b66ea37b7e4f25cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUcWl4ACgkQcaHudmEf86pKDACeLnrutK+t6eldAV/HdZ3U2JCT
-gXkAnRSfi8YXYCVMBkF6gh6jZ3INqkjG
-=NIhX
+iEYEAREIAAYFAlUkOdsACgkQcaHudmEf86rKAACffsC7vvy6kEAz/xtHX2YfONjX
+7ekAn0yHCGBTzEy0/DSApSADMIlcbUKL
+=X7MK
 -----END PGP SIGNATURE-----
