@@ -1,6 +1,10 @@
 # ChangeLog for net-im/skypetab-ng
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/skypetab-ng/ChangeLog,v 1.15 2015/04/01 20:52:59 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/skypetab-ng/ChangeLog,v 1.16 2015/04/07 20:12:21 slyfox Exp $
+
+  07 Apr 2015; Sergei Trofimovich <slyfox@gentoo.org> skypetab-ng-0.5.2.ebuild,
+  skypetab-ng-9999.ebuild:
+  Added missing 'qmake' depend and QtCore depend (bug #545346 by redneb).
 
   01 Apr 2015; Sergei Trofimovich <slyfox@gentoo.org> skypetab-ng-9999.ebuild:
   Update multilib deps in live ebuild.
